fixing the overlapping between the login and register

--- a/health-care/src/app/login/login.css
+++ b/health-care/src/app/login/login.css
@@ -10,7 +10,7 @@ body {
   padding: 10px;
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
-.container {
+.containerInLogin {
    display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,13 +22,13 @@ body {
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
 }
-.container .title {
+.containerInLogin .titleInLogin {
   font-size: 25px;
   font-weight: 500;
   letter-spacing: 2.5px;
   position: relative;
 }
-.container .title::before {
+.containerInLogin .titleInLogin::before {
   content: "";
   position: absolute;
   left: 0;
@@ -38,14 +38,14 @@ body {
   border-radius: 5px;
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
-.content form .user-details {
+.content form .user-detailsInLogin {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
   margin: 20px 0 12px 0;
 }
-form .user-details .input-box {
+form .user-detailsInLogin .input-box {
   margin-bottom: 15px;
 
 }
@@ -65,7 +65,7 @@ form .input-box span.details {
   font-weight: 500;
   margin-bottom: 5px;
 }
-.user-details .input-box input {
+.user-detailsInLogin .input-box input {
   height: 45px;
   width: 100%;
   outline: none;
@@ -76,8 +76,8 @@ form .input-box span.details {
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
-.user-details .input-box input:focus,
-.user-details .input-box input:valid {
+.user-detailsInLogin .input-box input:focus,
+.user-detailsInLogin .input-box input:valid {
   border-color: #9b59b6;
 }
 form .gender-details .gender-title {
@@ -135,27 +135,27 @@ form .button input:hover {
 }
 /* Responsive media query code for mobile devices */
 @media(max-width: 584px) {
-  .container {
+  .containerInLogin {
     max-width: 100%;
   }
-  form .user-details .input-box {
+  form .user-detailsInLogin .input-box {
     margin-bottom: 15px;
     width: 100%;
   }
   form .category {
     width: 100%;
   }
-  .content form .user-details {
+  .content form .user-detailsInLogin {
     max-height: 300px;
     overflow-y: scroll;
   }
-  .user-details::-webkit-scrollbar {
+  .user-detailsInLogin::-webkit-scrollbar {
     width: 5px;
   }
 }
 /* Responsive media query code for mobile devices */
 @media(max-width: 459px) {
-  .container .content .category {
+  .containerInLogin .content .category {
     flex-direction: column;
   }
 }
